updated function for list of quotes

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,6 +13,10 @@
 <div class="rules">
   <p id="link">
     <a href="/api">Click here to view API</a>
+    
+  </p id="link">
+  <p>
+    <a href="/quotes">Click here to view Quotes</a>
   </p>
   <ul>
     <li>
